[gd_scene load_steps=8 format=3 uid="uid://chgyuivvaogoe"]

[ext_resource type="Texture2D" uid="uid://bcnkes7qb06cl" path="res://ART/UI/willkillicon.png" id="1_efn74"]
[ext_resource type="Script" path="res://SCRIPTS/UI/Juice/DamageIndication/damage_indicator.gd" id="1_xo2sr"]
[ext_resource type="FontFile" uid="uid://3nylx15tuvb5" path="res://ART/Fonts/absolute-minimum.ttf" id="3_ne7nt"]
[ext_resource type="LabelSettings" uid="uid://db4fud0jf080k" path="res://RESOURCES/UI/LabelSettings/minimal_small.tres" id="3_w0shn"]
[ext_resource type="LabelSettings" uid="uid://16psntbgd1gu" path="res://RESOURCES/UI/LabelSettings/minimal_mini.tres" id="5_pc21c"]

[sub_resource type="Gradient" id="Gradient_k557k"]
offsets = PackedFloat32Array(0, 0.337398, 0.457317, 0.715447, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.404228, 0.404228, 0.404228, 1, 0.45935, 0.45935, 0.45935, 1, 0.715447, 0.715447, 0.715447, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vro7v"]
gradient = SubResource("Gradient_k557k")
width = 64

[node name="DamageIndicator" type="Node2D"]
script = ExtResource("1_xo2sr")

[node name="DeathIndicator" type="TextureRect" parent="."]
modulate = Color(1, 0, 0, 0.364706)
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("1_efn74")
expand_mode = 1

[node name="HitChance" type="Label" parent="."]
offset_top = 2.0
offset_right = 64.0
offset_bottom = 35.0
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 18
text = "10%"
label_settings = ExtResource("3_w0shn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CritChance" type="Label" parent="."]
offset_left = 25.0
offset_top = 18.0
offset_right = 64.0
offset_bottom = 39.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ne7nt")
theme_override_font_sizes/font_size = 6
text = "10%"
label_settings = ExtResource("5_pc21c")
horizontal_alignment = 2
vertical_alignment = 1

[node name="border" type="TextureRect" parent="."]
offset_top = 35.0
offset_right = 64.0
offset_bottom = 38.0
texture = SubResource("GradientTexture1D_vro7v")

[node name="DamageBeingDealt" type="Label" parent="."]
offset_left = -4.0
offset_top = 39.0
offset_right = 43.0
offset_bottom = 63.0
text = "-10"
label_settings = ExtResource("3_w0shn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPListener" type="Label" parent="."]
offset_left = 39.0
offset_top = 46.0
offset_right = 64.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 6
text = "01/23"
label_settings = ExtResource("5_pc21c")
horizontal_alignment = 2
vertical_alignment = 1
